Changed fermer une session to fermer la session
Changed fermer une session to fermer la session

--- a/site/pages/v4/design/buttons-fr.hbs
+++ b/site/pages/v4/design/buttons-fr.hbs
@@ -612,6 +612,9 @@
               <button type="submit" class="btn btn-primary"><span class="fa fa-sign-in"></span> Ouvrir une session </button>
             </li>
             <li>
+            <li>
+              <button type="submit" class="btn btn-primary"><span class="="glyphicon glyphicon-off"></span> Ouvrir une session </button> 
+            </li>
             <li>Texte seulement&nbsp;: <a href="#"><span class="fa fa-sign-in"></span> Ouvrir une session </a> ou <a href="#"> Ouvrir une session </a> </li>
           </ul></td>
         <td><ul>
@@ -628,19 +631,22 @@
           </ul></td>
       </tr>
       <tr>
-        <td>Fermer une session </td>
+        <td>Fermer la session </td>
         <td><ul class="list-unstyled lst-spcd">
             <li>
-              <button type="submit" class="btn btn-default">Fermer une session </button>
+              <button type="submit" class="btn btn-default">Fermer la session </button>
             </li>
             <li>
-              <button type="submit" class="btn btn-default"><span class="fa fa-sign-out"></span> Fermer une session </button>
+              <button type="submit" class="btn btn-default"><span class="fa fa-sign-out"></span> Fermer la session </button>
             </li>
-            <li>Texte seulement : <a href="#"><span class="fa fa-sign-out"></span> Fermer une session </a> or <a href="#"> Fermer une session </a> </li>
+            <li>
+              <button type="submit" class="btn btn-primary"><span class="="glyphicon glyphicon-off"></span> Fermer la session</button> 
+            </li>
+            <li>Texte seulement : <a href="#"><span class="fa fa-sign-out"></span> Fermer la session </a> or <a href="#"> Fermer une session </a> </li>
           </ul></td>
         <td><ul>
-            <li>Utilisez pour fermer une session dans une  application</li>
-            <li> Assurez-vous que le bouton «&nbsp;Fermer une session&nbsp;» s'affiche sur chaque page dans le coin supérieur droit pour toutes les applications qui nécessitent une ouverture de session</li>
+            <li>Utilisez pour fermer la session dans une  application</li>
+            <li> Assurez-vous que le bouton «&nbsp;Fermer la session&nbsp;» s'affiche sur chaque page dans le coin supérieur droit pour toutes les applications qui nécessitent une ouverture de session</li>
           </ul></td>
       </tr>
       <tr>
