Markup cleanup - Removed unnessary code like role and IE conditional comment

--- a/_includes/breadcrumb-theme-wet-boew-fr.html
+++ b/_includes/breadcrumb-theme-wet-boew-fr.html
@@ -1,4 +1,4 @@
-<nav role="navigation" id="wb-bc" property="breadcrumb">
+<nav id="wb-bc" property="breadcrumb">
 	<h2>Vous êtes ici :</h2>
 	<div class="container">
 		<div class="row">
