--- a/_includes/header-theme-wet-boew-en.html
+++ b/_includes/header-theme-wet-boew-en.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
+<!DOCTYPE html>
 <html class="no-js" lang="en" dir="ltr">
-<!--<![endif]-->
 <head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
@@ -22,22 +21,15 @@
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-<!--[if gte IE 9 | !IE ]><!-->
 <link href="https://wet-boew.github.io/wet-boew/theme-wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
 <link rel="stylesheet" href="https://wet-boew.github.io/wet-boew/theme-wet-boew/css/theme.min.css">
-<!--<![endif]-->
-<!--[if lt IE 9]>
-		<link href="https://wet-boew.github.io/wet-boew/theme-wet-boew/assets/favicon.ico" rel="shortcut icon" />
-		<link rel="stylesheet" href="https://wet-boew.github.io/wet-boew/theme-wet-boew/css/ie8-theme.min.css" />
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script src="https://wet-boew.github.io/wet-boew/wet-boew/js/ie8-wet-boew.min.js"></script>
-		<![endif]-->
 {% if page.css_href and page.css_href contains '.css' %}
 <link rel='stylesheet' href='{{ page.css_href }}' />
 {% endif %}
 <noscript><link rel="stylesheet" href="https://wet-boew.github.io/wet-boew/wet-boew/css/noscript.css" /></noscript>
 </head>
 <body vocab="http://schema.org/" typeof="WebPage">
+<nav>
 <ul id="wb-tphp">
 <li class="wb-slc">
 <a class="wb-sl" href="#wb-cont">Skip to main content</a>
@@ -46,7 +38,8 @@
 <a class="wb-sl" href="#wb-info">Skip to "About this site"</a>
 </li>
 </ul>
-<header role="banner">
+</nav>
+<header>
 <div id="wb-bnr">
 <div id="wb-bar">
 <div class="container">
