--- a/_includes/sitemenu-theme-wet-boew-fr.html
+++ b/_includes/sitemenu-theme-wet-boew-fr.html
@@ -1,4 +1,4 @@
-<nav role="navigation" id="wb-sm" data-ajax-replace="../../wet-boew/ajax/sitemenu-fr.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
+<nav id="wb-sm" data-ajax-replace="../../wet-boew/ajax/sitemenu-fr.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
 	<div class="container nvbar">
 		<h2>Menu des sujets</h2>
 		<div class="row">
