--- a/_includes/breadcrumb-theme-wet-boew-en.html
+++ b/_includes/breadcrumb-theme-wet-boew-en.html
@@ -1,4 +1,4 @@
-<nav role="navigation" id="wb-bc" property="breadcrumb">
+<nav id="wb-bc" property="breadcrumb">
 	<h2>You are here:</h2>
 	<div class="container">
 		<div class="row">
