--- a/_includes/footer-theme-wet-boew-en.html
+++ b/_includes/footer-theme-wet-boew-en.html
@@ -1,4 +1,4 @@
-<footer role="contentinfo" id="wb-info" class="visible-sm visible-md visible-lg wb-navcurr">
+<footer id="wb-info" class="visible-sm visible-md visible-lg wb-navcurr">
 <div class="container">
 <nav role="navigation" class="row">
 <h2>About this site</h2>
@@ -31,13 +31,8 @@
 </nav>
 </div>
 </footer>
-<!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://wet-boew.github.io/wet-boew/wet-boew/js/wet-boew.min.js"></script>
-<!--<![endif]-->
-<!--[if lt IE 9]>
-<script src="https://wet-boew.github.io/wet-boew/wet-boew/js/ie8-wet-boew2.min.js"></script>
-<![endif]-->
 {% if page.script_src and page.script_src contains '.js' %}
 <script src='{{ page.script_src }}'></script>
 {% endif %}
