--- a/_includes/sitemenu-theme-wet-boew-en.html
+++ b/_includes/sitemenu-theme-wet-boew-en.html
@@ -1,4 +1,4 @@
-<nav role="navigation" id="wb-sm" data-ajax-replace="../../wet-boew/ajax/sitemenu-en.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
+<nav id="wb-sm" data-ajax-replace="../../wet-boew/ajax/sitemenu-en.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
 	<div class="container nvbar">
 		<h2>Topics menu</h2>
 		<div class="row">
