--- a/_layouts/default-theme-wet-boew-fr.html
+++ b/_layouts/default-theme-wet-boew-fr.html
@@ -1,5 +1,5 @@
 {% include header-theme-wet-boew-fr.html %}
-<main role="main" property="mainContentOfPage" class="container">
+<main property="mainContentOfPage" class="container">
 <h1 id="wb-cont" property="name">{{ page.title }}</h1>
 {% include content-buttons-fr.html %}
 
