--- a/_layouts/default-theme-wet-boew-fr.html
+++ b/_layouts/default-theme-wet-boew-fr.html
@@ -2,8 +2,18 @@
 <main property="mainContentOfPage" class="container">
 <h1 id="wb-cont" property="name">{{ page.title }}</h1>
 {% include content-buttons-fr.html %}
+{% if page.written_lang != null and page.written_lang != '' %}
+<div class="alert alert-warning">
+	<p>Cette page n'est pas disponible en version française présentement.</p>
+</div>
+<div lang="{{ page.written_lang }}">
+{% endif %}
 
 {{ content }}
+
+{% if page.written_lang != null and page.written_lang != '' %}
+</div>
+{% endif %}
 
 {% if page.modified == null or page.modified == '' %}{% elsif page.date_modified == false %}{% elsif site.date_modified == false and page.date_modified != true %}
 {% else %}
@@ -13,4 +23,4 @@
 </dl>
 {% endif %}
 </main>
-{% include footer-theme-wet-boew-fr.html %}  
+{% include footer-theme-wet-boew-fr.html %}
