--- a/_includes/footer-theme-wet-boew-en.html
+++ b/_includes/footer-theme-wet-boew-en.html
@@ -12,7 +12,7 @@
 <h3>About</h3>
 <ul class="list-unstyled">
 <li><a href="../../wet-boew/index-en.html#about">About the Web Experience Toolkit</a></li>
-<li><a rel="external" href="https://www.tbs-sct.gc.ca/ws-nw/index-eng.asp">About the Web Standards</a></li>
+<li><a rel="external" href="https://www.canada.ca/en/treasury-board-secretariat/topics/government-communications.html">About the Web Standards</a></li>
 </ul>
 </section>
 <section class="col-sm-3">
