--- a/_includes/footer-theme-wet-boew-fr.html
+++ b/_includes/footer-theme-wet-boew-fr.html
@@ -12,7 +12,7 @@
 <h3>À propos</h3>
 <ul class="list-unstyled">
 <li><a href="../../wet-boew/index-fr.html#apropos">À propos de la Boîte à outils de l’expérience Web</a></li>
-<li><a rel="external" href="https://www.tbs-sct.gc.ca/ws-nw/index-fra.asp">À propos des normes Web</a></li>
+<li><a rel="external" href="https://www.canada.ca/fr/secretariat-conseil-tresor/sujets/communications-gouvernementales.html">À propos des normes Web</a></li>
 </ul>
 </section>
 <section class="col-sm-3">
