Minor Bug with Language Switch
Minor Bug with Language Switch

--- a/_includes/header-theme-wet-boew-en.html
+++ b/_includes/header-theme-wet-boew-en.html
@@ -49,7 +49,7 @@
 {% if page.languages == false or site.languages == false and page.languages != true %}
 {% else %}
 <ul class="text-right">
-<li><a lang="fr" hreflang="fr" href="../../wet-boew-styleguide{{ page.url | replace: 'en', 'fr' }}" lang="fr">Français</a></li>
+<li><a lang="fr" hreflang="fr" href="../../wet-boew-styleguide{{ page.url | replace: '-en', '-fr' }}" lang="fr">Français</a></li>
 <li class="curr">English&#32;<span>(current)</span></li>
 </ul>
 {% endif %}
