--- a/_includes/header-theme-wet-boew-fr.html
+++ b/_includes/header-theme-wet-boew-fr.html
@@ -50,7 +50,7 @@
 {% else %}
 <ul class="text-right">
 <li class="curr">Français&#32;<span>(actuel)</span></li>
-<li><a lang="en" hreflang="en" href="../../wet-boew-styleguide{{ page.url | replace: 'fr', 'en' }}">English</a></li>
+<li><a lang="en" hreflang="en" href="../../wet-boew-styleguide{{ page.url | replace: '-fr', '-en' }}">English</a></li>
 </ul>
 {% endif %}
 </section>
